--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@ permalink: /contact/
 ---
 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfaref33TspBc_SUgkSj2vxXqIfqwkEXVKsmMtshfb9j_P7Aw/viewform" target="_blank">
-    <button style="border: 2px solid; width: 30em; padding: 0.5em; font-size: 0.9em;">
+    <button class="btn-link">
     点击这里，直接向我发送Email <br />
     To send me email, click here.
     </button>
