--- a/encrypt.html
+++ b/encrypt.html
@@ -2,4 +2,6 @@
 title: 使用密码保护你我的消息 / Message Protection via Cryptography 
 layout: default
 permalink: /encrypt/
+allow_script: true
 ---
+<script src="/js/encrypt.js"></script>
