update homepage with 2 academic achievements up to now

--- a/contacts.html
+++ b/contacts.html
@@ -2,7 +2,16 @@
 title: 我的联系方式 / My contacts
 layout: default
 permalink: /contact/
+styles:
+    - 
+        url: /css/contact.css
 ---
+
+我的电子邮件地址 / My Email Address:<br />
+<img class="emailsvg" src="/images/email.svg"></img>
+<p>
+
+<div>
 
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSfaref33TspBc_SUgkSj2vxXqIfqwkEXVKsmMtshfb9j_P7Aw/viewform" target="_blank">
     <button class="btn-link">
@@ -10,3 +19,5 @@ permalink: /contact/
     To send me email, click here.
     </button>
 </a>
+
+</div>
